# machine-learning-tools

./: README.md  sift.cpp
Linear Regression/: CMakeLists.txt  README.md  l_regressin.cpp
Linear Regression/src/: dataset.txt  l_regression.cpp
crop tool/: crop_tool.cpp
sift/: sift.cpp
surf/: surf.cpp
